# document-intelligence-platform

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
configs/: pricing.yaml
infrastructure/docker/: README.md
monitoring/: README.md
scripts/: chunk_documents_cli.py  clean_pdf_cli.py  doc_clean_cli.py  token_cost_cli.py
security/: README.md
src/document_intelligence_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/knowledge_engine/: main.py
src/knowledge_engine/adapters/openai/: openai_embeddings.py
src/knowledge_engine/api/routes/: health.py
src/knowledge_engine/core/: config.py  exceptions.py  logging_config.py
src/knowledge_engine/rag/chunking/: base_chunker.py  chunk_metadata_builder.py  semantic_chunker.py  sentence_splitter.py
src/knowledge_engine/rag/cleaning/: doc_cleaner.py  document_quality_validator.py  header_footer_filter.py  line_wrapper.py  pdf_text_extractor.py  text_normalizer.py
src/knowledge_engine/rag/embeddings/: embedding_provider.py
src/knowledge_engine/rag/retrieval/: reranker.py  retrieval_filters.py  retriever.py
src/knowledge_engine/rag/vectorstore/: chroma_repository.py  index_manager.py
src/knowledge_engine/utils/: file_ops.py  text_utils.py  token_cost.py
tests/: conftest.py
tests/integration/: test_index_build.py  test_retrieve_flow.py  test_vectorstore.py
tests/unit/: test_basic.py  test_chunk_metadata_builder.py  test_clean_to_chunks.py  test_config.py  test_header_footer_filter.py  test_health.py  test_line_wrapper.py  test_text_normalizer.py  test_token_cost.py
