[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-intelligence-platform"
version = "0.1.0"
description = "Knowledge Engine for grounded document reasoning"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "tiktoken",
    "fastapi",
    "uvicorn",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
